API to post multiple teachers
