# school-teacher-management/docs/swagger.json
@@ -31,7 +31,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/model.Attendance"
+                                "$ref": "#/definitions/school-teacher-management_internal_model.Attendance"
                             }
                         }
                     }
@@ -56,7 +56,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.AttendanceRequest"
+                            "$ref": "#/definitions/school-teacher-management_internal_model.AttendanceRequest"
                         }
                     }
                 ],
@@ -113,7 +113,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Attendance"
+                            "$ref": "#/definitions/school-teacher-management_internal_model.Attendance"
                         }
                     },
                     "404": {
@@ -152,7 +152,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.Attendance"
+                            "$ref": "#/definitions/school-teacher-management_internal_model.Attendance"
                         }
                     }
                 ],
@@ -160,7 +160,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Attendance"
+                            "$ref": "#/definitions/school-teacher-management_internal_model.Attendance"
                         }
                     },
                     "400": {
@@ -245,7 +245,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.AttendanceResponse"
+                            "$ref": "#/definitions/school-teacher-management_internal_model.AttendanceResponse"
                         }
                     }
                 }
@@ -282,7 +282,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.AttendanceResponse"
+                            "$ref": "#/definitions/school-teacher-management_internal_model.AttendanceResponse"
                         }
                     }
                 }
@@ -318,7 +318,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/model.Teacher"
+                                "$ref": "#/definitions/school-teacher-management_internal_model.Teacher"
                             }
                         }
                     },
@@ -352,7 +352,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.Teacher"
+                            "$ref": "#/definitions/school-teacher-management_internal_model.Teacher"
                         }
                     }
                 ],
@@ -360,7 +360,64 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/model.Teacher"
+                            "$ref": "#/definitions/school-teacher-management_internal_model.Teacher"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/teachers/bulk": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "teachers"
+                ],
+                "summary": "Create multiple teachers",
+                "parameters": [
+                    {
+                        "description": "List of teachers",
+                        "name": "teachers",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/school-teacher-management_internal_model.TeacherRequest"
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
                         }
                     },
                     "400": {
@@ -406,7 +463,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Teacher"
+                            "$ref": "#/definitions/school-teacher-management_internal_model.Teacher"
                         }
                     },
                     "404": {
@@ -446,7 +503,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.Teacher"
+                            "$ref": "#/definitions/school-teacher-management_internal_model.Teacher"
                         }
                     }
                 ],
@@ -454,7 +511,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Teacher"
+                            "$ref": "#/definitions/school-teacher-management_internal_model.Teacher"
                         }
                     },
                     "400": {
@@ -480,7 +537,7 @@
         }
     },
     "definitions": {
-        "model.Attendance": {
+        "school-teacher-management_internal_model.Attendance": {
             "type": "object",
             "required": [
                 "status",
@@ -506,7 +563,7 @@
                     "type": "string"
                 },
                 "teacher": {
-                    "$ref": "#/definitions/model.Teacher"
+                    "$ref": "#/definitions/school-teacher-management_internal_model.Teacher"
                 },
                 "teacher_id": {
                     "type": "integer"
@@ -516,7 +573,7 @@
                 }
             }
         },
-        "model.AttendanceDTO": {
+        "school-teacher-management_internal_model.AttendanceDTO": {
             "type": "object",
             "properties": {
                 "checkIn": {
@@ -536,7 +593,7 @@
                 }
             }
         },
-        "model.AttendanceRequest": {
+        "school-teacher-management_internal_model.AttendanceRequest": {
             "type": "object",
             "required": [
                 "status",
@@ -551,18 +608,18 @@
                 }
             }
         },
-        "model.AttendanceResponse": {
+        "school-teacher-management_internal_model.AttendanceResponse": {
             "type": "object",
             "properties": {
                 "attendanceList": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/model.AttendanceDTO"
+                        "$ref": "#/definitions/school-teacher-management_internal_model.AttendanceDTO"
                     }
                 }
             }
         },
-        "model.Teacher": {
+        "school-teacher-management_internal_model.Teacher": {
             "type": "object",
             "properties": {
                 "created_at": {
@@ -587,6 +644,31 @@
                     "type": "string"
                 },
                 "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "school-teacher-management_internal_model.TeacherRequest": {
+            "type": "object",
+            "required": [
+                "email",
+                "first_name",
+                "last_name"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "last_name": {
+                    "type": "string"
+                },
+                "phone": {
+                    "type": "string"
+                },
+                "subject": {
                     "type": "string"
                 }
             }
